--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
+
+{% block title %} Home {% endblock %}
+
+
+{% block main %}
     {% for todo in todos %}
         <a href="#">{{todo.title}}</a></br>
     {% endfor %}
-
-</body>
-</html>
+{% endblock %}
