--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,6 @@
 
 {% block main %}
     {% for todo in todos %}
-        <a href="#">{{todo.title}}</a></br>
+        <a href="{% url 'details' todo.id %}">{{todo.title}}</a></br>
     {% endfor %}
 {% endblock %}
