--- a/templates/details.html
+++ b/templates/details.html
@@ -2,9 +2,13 @@
 {% block title %} {{todo.title}} details.. {% endblock %}
 
 {% block details %}
-<h1>{{todo.title}}</h1>
-<p>{{todo.c_time}}</p>
-<hr/>
-<br/>
-<h4>{{todo.body}}</h4>
+    <div class="container mt-2 bg-light">
+        <h1>{{todo.title}}</h1>
+        <p>{{todo.c_time}}</p>
+        <a class="btn btn-danger" href="{% url 'delete' todo.id %}">Delete</a>
+        <hr/>
+        <br/>
+        <h4>{{todo.body}}</h4>
+    </div>
+
 {% endblock %}
