delete-success-message

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+    {% include 'message.html' %}
 
-    {% block main %}  {% endblock %}
+    {% block list %}  {% endblock %}
     {% block details %}  {% endblock %}
 </body>
 </html>
