--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,6 @@
     {% include 'navbar.html' %}
     {% include 'message.html' %}
 
-    {% block list %}  {% endblock %}
-    {% block details %}  {% endblock %}
+    {% block content %}  {% endblock %}
 </body>
 </html>
