--- a/templates/details.html
+++ b/templates/details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} {{todo.title}} details.. {% endblock %}
 
-{% block details %}
+{% block content %}
     <div class="container mt-2 bg-light">
         <h1>{{todo.title}}</h1>
         <p>{{todo.c_time}}</p>
