--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-light ">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-    </div>
+      <a class="navbar-item me-5" href="{% url 'create' %}">
+          <button class="btn btn-outline-success" type="submit">Create</button>
+      </a>
   </div>
 </nav>
