--- a/templates/form.html
+++ b/templates/form.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 
-<form>
-    {{form}}
+<form action="" method="post" novalidate>
+    {% csrf_token %}
+    {{form.as_p}}
     <input type="submit" value="Create">
 </form>
 
