--- a/templates/createTodo.html
+++ b/templates/createTodo.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %} Create Todo {% endblock %}
 {% block content %}
 
 <form action="" method="post" novalidate>
