--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %} Register {% endblock %}
+{% block title %} Login {% endblock %}
 
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
         {{form.as_p}}
-        <input type="submit" value="Register">
+        <input type="submit" value="Login">
     </form>
 {% endblock %}
